--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <head><title>Hello GitHub</title></head>
+  <body>
+    <h1>🚀 You're coding on GitHub!</h1>
+    <p>This is your first webpage.</p>
+  </body>
+</html>
